# AlgorithmSelector

./: ._pylintrc  .gitignore  README.md  pyproject.toml  requirements.txt  tree.html
.github/: dependabot.yml
.github/workflows/: workflow.yml
docs/: TODO.md  graph.md  implemented_algorithms.md
scripts/: add_requirements.py  fil_comment.py  requirements.txt  structure.sh
src/: __init__.py  algorithm_base.py
src/computational/: __init__.py  fast_fourier_transform.py  monte_carlo.py  sieve_of_eratosthenes.py  simulated_annealing.py
src/computer_vision/: __init__.py  canny_edge_detector.py  hough_transform.py
src/cryptographic/: __init__.py  aes.py  rsa.py
src/data_compression/: __init__.py  huffman_coding.py  lzw_compression.py
src/data_structures/: __init__.py  avl_tree.py  binary_search.py  binary_search_tree copy.py  binary_search_tree.py  binary_tree.py  deque.py  heap.py  recursive_binary.py  (+3 more)
tests/: test_a_star.py  test_avl_tree.py  test_bellman_ford.py  test_bfs.py  test_binary_search.py  test_binary_search_tree.py  test_boyer_moore.py  test_bubble_sort.py  test_closest_pair_points.py  test_convex_hull.py  test_dfs.py  test_dijkstra.py  test_fast_fourier_transform.py  test_fibonacci.py  test_ford_fulkerson.py  test_genetic_algorithm.py  test_grover.py  test_heap.py  test_hough_transform.py  test_huffman_coding.py  test_k_means.py  test_kmp.py  test_knapsack.py  test_kruskal.py  test_line_intersection.py  test_linear_regression.py  test_lzw_compression.py  test_mapreduce.py  test_merge_sort.py  test_minimax.py  test_monte_carlo.py  test_nash_equilibrium.py  test_newton_raphson.py  test_paxos.py  test_polygon_triangulation.py  test_quick_sort.py  test_rabin_karp.py  test_raft.py  test_randomized_quicksort.py  test_rsa.py  (+8 more)
(+68 files in other folders)
