[tool.poetry]
name = "AlgorithmSelector"
version = "1.0.0"
description = "A collection of various algorithms and data structures"
authors = ["thomasthaddeus <thaddeus.r.thomas@gmail.com>"]
readme = "README.md"
packages = [
    { from = "src", include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/thomasthaddeus/AlgorithmSelector"

[tool.poetry.extras_require]
dev = ["check-manifest", "twine"]
